# QnA_Bot

./: alembic.ini  pyproject.toml
qna_bot/: db.py  main.py
qna_bot/alembic/: env.py
qna_bot/alembic/versions/: 1e2548491b43_initial_migration.py  d84215c04140_initial_migration.py
qna_bot/src/config/: db.py  seed_data.py
qna_bot/src/constants/: document_upload.py  messages.py
qna_bot/src/crud/: data_source_crud.py
qna_bot/src/models/: model.py  seed_data.py
qna_bot/src/routers/: data_source_routes.py  data_upload.py  data_upload_routes.py
qna_bot/src/schemas/: data_source_schema.py
qna_bot/src/services/: azure_blob_service.py  data_source_service.py
qna_bot/src/utils/: api_response.py
